documentação da camda gold